xytheris update, franken deck settings menu